apps/student-service/database/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-service
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: student-service-database
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
