apps/student-service/database/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: student-service-db-ingress
  namespace: student-service-database
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: student-service-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
        - podSelector:
            matchLabels:
              cnpg.io/cluster: student-service-db
      ports:
        - port: 8000
        - port: 5432
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: student-service
          podSelector:
            matchLabels:
              app.kubernetes.io/name: student-service-backend
      ports:
        - port: 5432
